added a header and main section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,84 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="nav-container">
+            <div class="logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="menus">
+                <li>home</li>
+                <li>service</li>
+                <li>about</li>
+                <li>contact</li>
+            </div>
+        </div>
+        <div class="banner-container">
+            <div class="banner-info">
+                <h1 class="title"><span class="primary">Digital</span> Agency You <br> Can Rely Upon !></h1>
+            <p class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga, totam ut voluptatem atque eligendi debitis saepe fugit alias voluptatum aliquam aperiam autem eos laudantium doloremque minima ratione dicta voluptas.</p>
+            <button class="btn bg-primary">Discover me</button>
+            <button class="btn">Hire us now</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="service-container">
+            <div class="left-side">
+                <button class="btn bg-primary">Service list</button>
+                <h2>Services We Can Help You With</h2>
+                <p class="service-discription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, quaerat repellendus commodi tempore sapiente aspernatur porro, minus sequi dicta alias vero ipsam odio natus officia dolor amet, molestias vitae quas!</p>
+                <ol>
+                    <li>Lorem ipsum dolor sit amet.
+                    </li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ol>
+                <div class="author-container">
+                    <div class="profile-container">
+                        <img class="author-image" src="asset/image/author.jpg" alt="">
+                        <h5>George Smith <br> <small>Ceo, Director</small></h5>
+                    </div>
+                    <div class="author-button">
+                        <button class="btn ">Hire us Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div class="first-two-box">
+                    <div class="box">
+                        <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                        <h3>Web Devlopment</h3>
+                    </div>
+                    <div class="box">
+                        <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                        <h3>Web Devlopment</h3>
+                    </div>
+                </div>
+                <div class="first-two-box">
+                    <div class="box">
+                        <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                        <h3>Web Devlopment</h3>
+                    </div>
+                    <div class="box">
+                        <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                        <h3>Web Devlopment</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="appoinment-container">
+            <div class="phone-call">
+                <img class="icon" src="asset/icons/phone-call.png" alt="">
+                <h6>GET A FREE CONSULTATION <br> 987 223 0000</h6>
+            </div>
+            <div class="appointment-discription">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aspernatur odio earum molestias necessitatibus incidunt, harum impedit eius sequi ea?</p>
+            </div>
+            <div class="appoinment-btn">
+                <button class="btn ">Make <br> Appointment</button>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
